<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ispublic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/user_and_public"
        android:background="@drawable/drawable_is_public"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/nopublic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/user_no_public"
        android:background="@drawable/drawable_is_public"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:gravity="center"
        android:layout_marginTop="20dp"

        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/cancel"
        android:background="@drawable/drawable_cancle"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>