<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chatAddLayout"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/chat_bottom_more_height"
    android:orientation="vertical"
    android:visibility="gone" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addImg"
                android:layout_width="@dimen/chat_Bottom_AddMore_Height"
                android:layout_height="@dimen/chat_Bottom_AddMore_Height"
                android:background="@drawable/icon_chat_tupian" />

            <TextView
                style="@style/text_clo666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/chat_bottom_picture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addCardBtn"
                android:layout_width="@dimen/chat_Bottom_AddMore_Height"
                android:layout_height="@dimen/chat_Bottom_AddMore_Height"
                android:background="@drawable/icon_chat_mingpian" />

            <TextView
                style="@style/text_clo666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/chat_bottom_card" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addLocationBtn"
                android:layout_width="@dimen/chat_Bottom_AddMore_Height"
                android:layout_height="@dimen/chat_Bottom_AddMore_Height"
                android:background="@drawable/icon_chat_weizhi" />

            <TextView
                style="@style/text_clo666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/chat_bottom_location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutVideo"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addVideoBtn"
                android:layout_width="@dimen/chat_Bottom_AddMore_Height"
                android:layout_height="@dimen/chat_Bottom_AddMore_Height"
                android:background="@drawable/icon_chat_xiaoshipin" />

            <TextView
                style="@style/text_clo666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/chat_bottom_video" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/addFile"
                android:layout_width="@dimen/chat_Bottom_AddMore_Height"
                android:layout_height="@dimen/chat_Bottom_AddMore_Height"
                android:background="@drawable/icon_chat_wenjian" />

            <TextView
                style="@style/text_clo666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/chat_file" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />
    </LinearLayout>

</LinearLayout>